# OpenGL-Project-Template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/glad/: glad.c
src/imgui/: imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_tables.cpp
